# sagard-portfolio-metric-extractor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
case-study/: 00-foundations-and-decisions.md  ENGAGEMENT-MAP.md  cockpit-frontend-guide.md  demo-honesty-script.md  i-context-and-problem.md  ii-a-backend-fix-plan.md  ii-prototype-findings.md  iii-0-presentation-outline-options.md  iii-1-presentation-outline-A-thorough.md  iii-2-presentation-outline-B-lean.md  iii-3-slide-index-A-and-B.md  iii-3-slide-index-A.md  iii-4-narration-script-A.md  investments.excalidraw  iv-system-design-and-scaling.md  slides.pptx  system-design.excalidraw  v-redundant-extraction-orchestrator.md  vi-concord-architecture-today.md
options/: ARCHITECTURE_OPTIONS.md
plan/: INTERVIEWER_QUESTIONS.md  INTERVIEW_ASSUMPTIONS_LEDGER.md  INTERVIEW_GUIDE.md  INTERVIEW_SCALING_OPTIONS.md  INTERVIEW_SCALING_PLAYBOOK.md  INTERVIEW_TRADEOFF_LEDGER.md  MOCK_INTERVIEW_QA.md  PLAN.md  PUSHBACK_CHEATSHEET.md  REPO_WORKFLOW.md  SPOKEN_PITCHES.md  decisions.excalidraw
portfolio_metrics/: __init__.py  cli.py  config.py  detect_metrics.py  extract_text.py  metric_aliases.py  normalize.py  parse_values.py  parser.py  parser_firecrawl.py  parser_local.py  pipeline.py  publish.py  schema.py  sector_profiles.py  terminal_ui.py  webapp.py
spec/: SPEC.md
tests/: test_basis_comparability.py  test_bootstrap.py  test_cli_normalize.py  test_cross_source_discrepancy.py  test_detect_metrics.py  test_extract_text.py  test_golden.py  test_normalization.py  test_pipeline.py  test_publish.py  test_webapp.py  (+4 more)
(+77 files in other folders)
